# FBT

./: .replit  index.js  package-lock.json  package.json  pyproject.toml  replit.md  streamlit_app.py  vercel.json  vite.config.ts
.github/workflows/: deploy.yml
attached_assets/: Pasted--FastBite-Pro-From-Demo-to-Disruption-Created-by-Jacque-Antoine-DeGraff-FastBite-Pro--1751806168976_1751806168987.txt  Pasted--debug-Evaluating-condition-for-step-Deploy-to-Vercel-debug-Evaluating-success-gith-1758338773745_1758338773784.txt  Pasted-Sovereign-I-understand-your-request-for-the-full-codebase-of-SpiralOne-a-core-component-of-the--1752585050504_1752585050545.txt
client/: index.html
client/src/: App.tsx  index.css  polyfills.ts
client/src/components/: AIChat.tsx
client/src/hooks/: useAuth.ts  useWebSocket.ts
client/src/lib/: agentkit.ts  constants.ts  onchainkit.ts  openzeppelin-templates.ts  queryClient.ts  web3.ts  whitelabel.ts
client/src/pages/: AIStudio.tsx  AdminPanel.tsx  Analytics.tsx  Compliance.tsx  Crowdfunding.tsx  Dashboard.tsx  DriverPortal.tsx  InvestorDashboard.tsx  MerchantHub.tsx  Omniverse.tsx  OrderSystem.tsx  SmartContracts.tsx  Tokenomics.tsx  auth-page.tsx  (+1 more)
public/: index.html
public/assets/: index-Dg5oN_aJ.css  index-MGTzajVh.js
server/: auth.ts  db.ts  index.ts  routes.ts  seed.ts  simple-seed.ts  storage.ts  vite.ts
server/ai/: ai-manager.ts  anthropic-provider.ts  base-provider.ts  deepseek-provider.ts  openai-provider.ts  routes.ts  streamlit-integration.ts  voice-handler.ts  xai-provider.ts
shared/: ai-providers.ts  schema.ts
(+6 files in other folders)
